// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Switch Checked 1`] = `
<div
  dir="ltr"
>
  <label
    className="fd-form-label"
    onKeyDown={[Function]}
  >
    Switch label
  </label>
  <label
    className="fd-switch__label"
  >
    <span
      className="fd-switch"
    >
      <input
        aria-checked={true}
        aria-label="Switch"
        checked={true}
        className="fd-switch__input"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="fd-switch__wrapper"
      >
        <div
          className="fd-switch__track"
        >
          <span
            className="fd-switch__handle"
            role="presentation"
          />
        </div>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Component API/Switch Compact 1`] = `
<div
  dir="ltr"
>
  <label
    className="fd-form-label"
    onKeyDown={[Function]}
  >
    Switch label
  </label>
  <label
    className="fd-switch__label"
  >
    <span
      className="fd-switch fd-switch--compact"
    >
      <input
        aria-checked={false}
        aria-label="Switch"
        checked={false}
        className="fd-switch__input"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="fd-switch__wrapper"
      >
        <div
          className="fd-switch__track"
        >
          <span
            className="fd-switch__handle"
            role="presentation"
          />
        </div>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Component API/Switch Dev 1`] = `
<div
  dir="ltr"
>
  <label
    className="fd-form-label"
    onKeyDown={[Function]}
  >
    label
  </label>
  <label
    className="fd-switch__label"
  >
    <span
      className="fd-switch"
    >
      <input
        aria-checked={false}
        aria-label="Switch"
        checked={false}
        className="fd-switch__input"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="fd-switch__wrapper"
      >
        <div
          className="fd-switch__track"
        >
          <i
            aria-label="on"
            className="sap-icon--accept fd-switch__icon--on fd-switch__icon"
            role="img"
          />
          <span
            className="fd-switch__handle"
            role="presentation"
          />
          <i
            aria-label="off"
            className="sap-icon--decline fd-switch__icon--off fd-switch__icon"
            role="img"
          />
        </div>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Component API/Switch Disabled 1`] = `
<div
  dir="ltr"
>
  <label
    className="fd-form-label is-disabled"
    onKeyDown={[Function]}
  >
    Switch label
  </label>
  <label
    className="fd-switch__label"
  >
    <span
      className="fd-switch"
    >
      <input
        aria-checked={false}
        aria-label="Switch"
        checked={false}
        className="fd-switch__input"
        disabled={true}
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="fd-switch__wrapper"
      >
        <div
          className="fd-switch__track"
        >
          <span
            className="fd-switch__handle"
            role="presentation"
          />
        </div>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Component API/Switch Internal Labels 1`] = `
<div
  dir="ltr"
>
  <label
    className="fd-form-label"
    onKeyDown={[Function]}
  >
    Show Internal Labels
  </label>
  <label
    className="fd-switch__label"
  >
    <span
      aria-live="polite"
      className="fd-switch__text"
    >
      off
    </span>
    <span
      className="fd-switch"
    >
      <input
        aria-checked={false}
        aria-label="Switch"
        checked={false}
        className="fd-switch__input"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="fd-switch__wrapper"
      >
        <div
          className="fd-switch__track"
        >
          <i
            aria-label="on"
            className=""
            role="img"
          />
          <span
            className="fd-switch__handle"
            role="presentation"
          />
          <i
            aria-label="off"
            className=""
            role="img"
          />
        </div>
      </div>
    </span>
  </label>
  <label
    className="fd-form-label"
    onKeyDown={[Function]}
  >
    Show Internal Labels and Icons
  </label>
  <label
    className="fd-switch__label"
  >
    <span
      aria-live="polite"
      className="fd-switch__text"
    >
      off
    </span>
    <span
      className="fd-switch fd-switch--semantic"
    >
      <input
        aria-checked={false}
        aria-label="Switch"
        checked={false}
        className="fd-switch__input"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="fd-switch__wrapper"
      >
        <div
          className="fd-switch__track"
        >
          <i
            aria-label="on"
            className="sap-icon--accept fd-switch__icon--on fd-switch__icon"
            role="img"
          />
          <span
            className="fd-switch__handle"
            role="presentation"
          />
          <i
            aria-label="off"
            className="sap-icon--decline fd-switch__icon--off fd-switch__icon"
            role="img"
          />
        </div>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Component API/Switch Primary 1`] = `
<div
  dir="ltr"
>
  <label
    className="fd-form-label"
    onKeyDown={[Function]}
  >
    Switch label
  </label>
  <label
    className="fd-switch__label"
  >
    <span
      className="fd-switch"
    >
      <input
        aria-checked={false}
        aria-label="Switch"
        checked={false}
        className="fd-switch__input"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="fd-switch__wrapper"
      >
        <div
          className="fd-switch__track"
        >
          <span
            className="fd-switch__handle"
            role="presentation"
          />
        </div>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Component API/Switch Semantic 1`] = `
<div
  dir="ltr"
>
  <label
    className="fd-form-label"
    onKeyDown={[Function]}
  >
    Switch label
  </label>
  <label
    className="fd-switch__label"
  >
    <span
      className="fd-switch fd-switch--semantic"
    >
      <input
        aria-checked={false}
        aria-label="Switch"
        checked={false}
        className="fd-switch__input"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="fd-switch__wrapper"
      >
        <div
          className="fd-switch__track"
        >
          <span
            className="fd-switch__handle"
            role="presentation"
          />
        </div>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Component API/Switch With Icons 1`] = `
<div
  dir="ltr"
>
  <label
    className="fd-form-label"
    onKeyDown={[Function]}
  >
    Switch label
  </label>
  <label
    className="fd-switch__label"
  >
    <span
      className="fd-switch"
    >
      <input
        aria-checked={false}
        aria-label="Switch"
        checked={false}
        className="fd-switch__input"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="fd-switch__wrapper"
      >
        <div
          className="fd-switch__track"
        >
          <i
            aria-label="on"
            className="sap-icon--accept fd-switch__icon--on fd-switch__icon"
            role="img"
          />
          <span
            className="fd-switch__handle"
            role="presentation"
          />
          <i
            aria-label="off"
            className="sap-icon--decline fd-switch__icon--off fd-switch__icon"
            role="img"
          />
        </div>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Component API/Switch With No Label 1`] = `
<div
  dir="ltr"
>
  <label
    className="fd-form-label"
    onKeyDown={[Function]}
  />
  <label
    className="fd-switch__label"
  >
    <span
      className="fd-switch"
    >
      <input
        aria-checked={false}
        aria-label="Switch"
        checked={false}
        className="fd-switch__input"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="fd-switch__wrapper"
      >
        <div
          className="fd-switch__track"
        >
          <span
            className="fd-switch__handle"
            role="presentation"
          />
        </div>
      </div>
    </span>
  </label>
</div>
`;
